[package]
name = "get_bitcoin_val"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
error-chain = "0.12"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
mysql = "19.0"
mysql_async = "0.22"
anyhow = "1.0"
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "mysql" ] }
async-std = { version = "1", features = [ "attributes" ] }

